--- a/index.html
+++ b/index.html
@@ -4,10 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <input type="checkbox" id="nav-check">
+        <div class="logo">
+            <img src="/assets/images/Transparent-Logo.svg" alt="">
+        </div>
+
+        <div class="nav-btn">
+            <label for="nav-check">
+              <span></span>
+              <span></span>
+              <span></span>
+            </label>
+          </div>
+
+        <div class="links">
+            <a href="#">About Us</a>
+            <a href="#">For Companies</a>
+            <a href="#">For Talents</a>
+            <a href="#">Job Board</a>
+            <a href="#">Blog</a>
+        </div>
+        <div class="buttons">
+            <button>hire a talent</button>
+            <button>apply as a talent</button>
+        </div>
+    </nav>
 </body>
 </html>
