--- a/index.html
+++ b/index.html
@@ -1,41 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <!-- navbar starts -->
     <nav>
-        <input type="checkbox" id="nav-check">
-        <div class="logo">
-            <img src="/assets/images/Transparent-Logo.svg" alt="">
-        </div>
+      <input type="checkbox" id="nav-check" />
+      <div class="logo">
+        <img src="/assets/images/Transparent-Logo.svg" alt="" />
+      </div>
 
-        <div class="nav-btn">
-            <label for="nav-check">
-              <span></span>
-              <span></span>
-              <span></span>
-            </label>
-          </div>
+      <div class="nav-btn">
+        <label for="nav-check">
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
+      </div>
 
-        <div class="links">
-            <a href="#">About Us</a>
-            <a href="#">For Companies</a>
-            <a href="#">For Talents</a>
-            <a href="#">Job Board</a>
-            <a href="#">Blog</a>
-        </div>
-        <div class="buttons">
-            <button>hire a talent</button>
-            <button>apply as a talent</button>
-        </div>
+      <div class="links">
+        <a href="#">About Us</a>
+        <a href="#">For Companies</a>
+        <a href="#">For Talents</a>
+        <a href="#">Job Board</a>
+        <a href="#">Blog</a>
+      </div>
+      <div class="buttons">
+        <button>hire a talent</button>
+        <button>apply as a talent</button>
+      </div>
     </nav>
-</body>
+    <!-- navbar ends -->
+
+    <header>
+      <div class="left">
+        <h1>Welcome to your next growth opportunity.</h1>
+        <p>
+          Get connected with full time, freelance and remote jobs that are
+          suited just for you and meet your prerequisite.
+        </p>
+        <button>apply as a talent</button>
+      </div>
+      <div class="right">
+        <img src="/assets/images/abiola.svg" alt="" />
+        <div class="card">
+          <img src="/assets/images/location_pin.svg" alt="" />
+          <span>Lagos, Nigeria</span>
+          <h2 class="name">
+            Abiola <br />
+            Ogunjobi
+          </h2>
+          <!-- <span>Product Designer</span> -->
+          <div class="blue">5+ Years of Experience</div>
+          <div class="green">
+            <div>Figma</div>
+            <div>Adobe XD</div>
+            <div>Sketch</div>
+          </div>
+          <div class="red">
+            <div>HTML/CSS/JS</div>
+            <div>WordPress</div>
+          </div>
+          <div class="yellow">
+            <div>Photoshop</div>
+            <div>Illustrator</div>
+            <div>After Effects</div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="possiblities">
+      <h2>We open you up to a pool of possibilities.</h2>
+      <p>
+        Erase completely the stress and uncertainty of applying directly to
+        companies, through job boards and dealing with a lot of recruiters.
+        TalentCo will link you with opportunities you want and at companies with
+        similar interests.
+      </p>
+
+      <div class="possibility-images">
+        <div>
+          <img src="/assets/images/fulltime.png" alt="" />
+          <h2>Full time</h2>
+          <p>
+            Join top companies anywhere in the world as a full time employee
+          </p>
+          <a href="#" class="learn-more">Learn More ›</a>
+        </div>
+        <div>
+          <img src="/assets/images/part-time.png" alt="" />
+          <h2>Part-time</h2>
+          <p>
+            Work and Study? No Problem! We help you find the most suitable jobs
+            for your schedule
+          </p>
+          <a href="#" class="learn-more">Learn More ›</a>
+        </div>
+        <div>
+          <img src="/assets/images/freelance.png" alt="" />
+          <h2>Freelance</h2>
+          <p>
+            Are one off gigs your preference? Talentco helps you find freelance
+            jobs of your choice
+          </p>
+          <a href="#" class="learn-more">Learn More ›</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="blue-section">
+      <div>
+        <img src="/assets/images/one-stop.png" alt="" />
+        <div>
+          <h3>A One-Stop Platform</h3>
+          <p>
+            You connect with TalentCo We communicate with dozens of companies,
+            platforms and hundreds of recruiters to single out the best
+            opportunity for you!
+          </p>
+          <button>Get Started</button>
+        </div>
+      </div>
+      <div>
+        <div>
+            <h3>Talent Centric Process,
+                Putting you FIRST!</h3>
+            <p>
+                TalentCo collaborates with companies who uphold the International standard hiring process. We ensure that good and structured career growth experiences are adopted for you.
+            </p>
+            <button>Get Started</button>
+          </div>
+        <img src="/assets/images/talent-centric.png" alt="" />
+      </div>
+    </div>
+  </body>
 </html>
