--- a/index.html
+++ b/index.html
@@ -144,5 +144,53 @@
         <img src="/assets/images/talent-centric.png" alt="" />
       </div>
     </div>
+
+    <div class="trusted">
+        <h1>Trusted by Talents <br />across the GLOBE!</h1>
+        <div class="img">
+            <img src="/assets/images/testim.svg" alt="">
+        </div>
+    </div>
+
+    <div class="matched">
+        <h1>Get matched to your dream opportunity</h1>
+        <p>Save time and Focus your energy in getting one step closer to your next <br /> best opportunity. Join our talent network now!</p>
+        <div class="mbtn">
+            <button>APPLY AS A TALENT</button>
+        </div>
+    </div>
+
+    <div class="footer-img">
+        <img src="/assets/images/students.png" alt="">
+    </div>
+
+    <footer>
+        <div class="footer-top">
+            <div>
+                <img src="/assets/images/footer-logo.svg" alt="">
+            </div>
+            <div>
+                <h2>Quick Links</h2>
+                <p>For Companies</p>
+                <p>for talents</p>
+                <p>job board</p>
+            </div>
+            <div>
+                <h2>company</h2>
+                <p>about us</p>
+                <p>blog</p>
+                <p>testimonials</p>
+            </div>
+            <div>
+                <h2>support</h2>
+                <p>contact us</p>
+                <p>help center</p>
+                <p>faqs</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>© 2022 — Talentco.  All Rights Reserved.</p>
+        </div>
+    </footer>
   </body>
 </html>
